# RabbitMQ

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requests.http
.ai-instructions/: 01-introducao.md  02-ambiente-docker.md  03-api-produtor.md  04-worker-consumidor.md  05-testes.md  06-simulacao.md
api/: Dockerfile  main.py
api/domain/: schemas.py
api/infra/: database.py  publisher.py  topology.py
data/: pedidos.db-shm  pedidos.db-wal
scripts/: rmq_status.py
tests/: test_api.py  test_worker_database.py
worker/: Dockerfile  main.py
worker/domain/: models.py
worker/infra/: consumer.py  database.py  topology.py
