[project]
name = "rabbitmq-stack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "pika>=1.3",
    "pydantic-settings>=2.2",
    "taskipy>=1.13",
    "ruff>=0.4",
]

[dependency-groups]
dev = [
    "rich>=13.0",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.taskipy.tasks]
lint      = "ruff check . && ruff format --check ."
api-dev   = "uvicorn api.main:app --reload --host 0.0.0.0 --port 8000"
api-start = "uvicorn api.main:app --host 0.0.0.0 --port 8000"
worker-start = "python -m worker.main"
logs-api      = "docker logs api-produtor -f"
logs-worker   = "docker logs worker-consumidor -f"
logs-rabbitmq = "docker logs rabbitmq-broker -f"
rmq-status    = "python3 scripts/rmq_status.py"
test      = "pytest tests/ -v"
test-cov  = "pytest tests/ -v --tb=short --cov=. --cov-report=term-missing --cov-fail-under=95"
clean     = "find . -type d -name __pycache__ -exec rm -rf {} + && find . -name '*.pyc' -delete"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: testes unitários puros sem I/O real",
    "integration: testes que exercitam I/O real (SQLite, filesystem)",
]

[tool.coverage.run]
omit = ["worker/main.py", "scripts/*"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]